--- a/title.tex
+++ b/title.tex
@@ -10,10 +10,9 @@ Department of Physical Electronics\\
 \includegraphics[width=5cm]{img/LogoCVUT}
 \vspace{4cm}
 
-\large{doctoral thesis}
+\large{doctoral thesis}\\
 \vspace{5mm}
-
-\textbf{\huge \WorkTitle\\}
+\textbf{\huge Metamaterials for Terahertz spectral range\\}
 \end{center}
 
 \date{ } 			
